[package]
name = "oka_rust_libary"
version = "0.1.0"
authors = ["agajo <madaopc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.2"
num = "0.4"
itertools = "0.10.0"
petgraph = "0.5.0"
rand = { version = "0.7.2", features = ["small_rng"] }
nalgebra = "0.25.4"
